lecture/terraform/Terraform on Azure - 2024/03-security-group/subnet.tf
# Subnet1
resource "azurerm_subnet" "subnet1" {
    name = "${var.prefix}-subnet1"
    resource_group_name = azurerm_resource_group.this.name
    virtual_network_name = azurerm_virtual_network.this.name
    address_prefixes = ["${var.subnet_cidr1}"]
}

# Subnet2
resource "azurerm_subnet" "subnet2" {
    name = "${var.prefix}-subnet2"
    resource_group_name = azurerm_resource_group.this.name
    virtual_network_name = azurerm_virtual_network.this.name
    address_prefixes = ["${var.subnet_cidr2}"]
}
